# amlbench

./: .env.example  .gitignore  AGENTS.md  LICENSE  LIMITATIONS.md  NOTICE  README.md  SECURITY.md  pyproject.toml  rerender.py  run.py  ws2_milestone.py
.github/workflows/: ci.yml  pages.yml
agent/: adapter.py  byo.py  conditions.py  triage.py
amlbench/: __init__.py  __main__.py
common/: claims.py  config.py  io.py  llm.py  netguard.py  parallel.py  report.py
config/: config.yaml
data/: alerts.jsonl  amlsim.py  build.py  rules.py
docs/: AMLBENCH_FINDINGS.md  BENCHMARK.md  BENCHMARK_PLAN.md  BYO_GUIDE.md  CANONICAL_RUN.md  CHALLENGE_PROTOCOL.md  DATA_CONTRACT.md  DOMAIN_BACKGROUND.md  RULE_BASIS.md  SELF_CERT_DESIGN.md
eval/: adversary_a3.py  adversary_eval.py  adversary_gen.py  aml_task.py  canonical_run.py  figstyle.py  framing_eval.py  framing_search.py  incentive_ladder.py  ladder_multimodel.py  metrics.py  multimodel.py  observability_deception.py  per_typology.py  probe.py  typology_multimodel.py  ws2_foreign_chart.py
evaluator/: schema.py  validate.py  verify.py
finding/: attestation.py  cert_request.py
interp/: README.md  build_probe_set.py  presentation.py
ledger/: render.py
notebooks/: amlbench_quickstart.ipynb  cupel_quickstart.ipynb
observability/: instrument.py  metrics.py
results/: AMLBENCH_FINDINGS.md  AMLSIM_FIDELITY.md  REPORT.md  SAMPLE_REPORT.md  WS2_FOREIGN_REPORT.md
samples/: sample_decisions.csv
scripts/: verify.sh
site/: CNAME  index.html  research.html
tests/: byo_smoke.py  offline_smoke.py  test_airgapped_selfcert.py  test_byo_logreplay.py  test_cert_request.py  test_certify_gate.py  test_no_secret_leak.py
tools/: amlsim_fidelity.py  certify.py  challenge.py  desensitize.py  model_card.py  repro.py
(+53 files in other folders)
