[project]
name = "cupel"
version = "0.1.0"
description = "Behavioral assurance + interpretable per-decision verification for a financial AI agent (AML transaction-monitor), under a sabotage-style evaluation."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.40",
    "replicate>=0.34",
    "inspect-ai>=0.3.40",
    "arize-phoenix>=4.0",
    "arize-phoenix-evals>=0.13",
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "data", "observability", "eval", "evaluator", "ledger", "finding", "common"]

[tool.uv]
package = false
